--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -40,13 +40,15 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758448.md#1">2019Â½ÆóÎ¥Ô¼Óâ1400ÒÚ ±é¼°28Ê¡ ±±¾©×î¶à</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758681.md#1">ÖÜÏþ»Ô£ºÏ°·¢ºØ´Ê 2020ËµÐÂÄê¿ìÀÖÓÐÐ©³ÁÖØ</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758506.md#1">Ì¨Â½Î¯»á»Ø»÷ÖÐ¹²£º¡°µ¹¹ûÎªÒò ¶ñÒâÅ¤Çú¡±</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756072.md#1">ÖÐ¹²ÀûÓÃÉýÆìÒÇÊ½ÓûÈ¾ºì·Ñ³Ç »ªÈË³â»ÄÌÆ</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758277.md#1">ÖÐ¹²Í³Õ½ÉøÍ¸Ì¨Íå Áù´óÊÖ¶Î</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758457.md#1">ÖÐ¹²»ú¹Ø´óÔºÄÚÎÑ²ØÂôÒùµã</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758999.md#1">»ªÎª2019¶¯µ´²»°² 2020ÃæÁÙËÄ´óÀ§¾³</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758887.md#1">2019´óÂ½³µÆó¹Ø¼ü×Ö£ºÏÂ»¬¡¢¿÷Ëð¡¢Í£²ú</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758889.md#1">ºÚÁú½­ÄÐ×Ó²¡ÖØÈÔÔâ·Ç·¨¾ÐÁô 9Ììºó²¡Íö</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758321.md#1">°²È«µ£ÓÇ ÃÀÂ½¾ü½ôËæº£¾ü½ûÓÃTikTok</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757910.md#1">·´ÉøÍ¸·¨¹ý¹Ø ×¨¼ÒÓõ¼ÓÏ¸Ôò×èÖÐ¹²È¾ºìÃ½Ìå</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11756981.md#1">·¨ÂÖ´ó·¨Å¦Ô¼Æì¶ÓÑ§Ô± ÐÂÄêÐ»Ê¦¶÷</a><br>
+<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758457.md#1">ÖÐ¹²»ú¹Ø´óÔºÄÚÎÑ²ØÂôÒùµã</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11758500.md#1">´¨ÆÕ£º1ÔÂ15ÈÕÎÒÔÚ°×¹¬Ç©µÚÒ»½×¶ÎÐ­Òé</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757804.md#1">·´ÉøÍ¸·¨Èý¶Á ÊÜÉøÍ¸½éÑ¡×îÖØ¿ÉÅÐ5ÄêÐÌ</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/31/n11757478.md#1">¸ÛÈË¸ÐÅå·¨ÂÖ¹¦´«ÕæÏà ¹§×£Àî´óÊ¦ÐÂÄêºÃ</a><br>
@@ -86,14 +88,12 @@
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755489.md#1">¼ûÖ¤´ó·¨ÉñÆæ ´óÂ½ÃñÖÚ¸Ð¶÷ÀîºéÖ¾´óÊ¦</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755963.md#1">´óÂ½Ð£Ô°´ûÐÎ³É²úÒµÁ´ ¸ßÀû´û±©Á¦´ß¿îºáÐÐ</a><br>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756214.md#1">¡°ÇïÓêÖ®¸£½Ì»á¡±ÄÁÊ¦Íõâù±»ÖØÅÐ9Äê</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756213.md#1">Ò»Ô±¹¤ÔÚ×Ü²¿ÌøÂ¥ º£¿µÍþÊÓÖ¸Æä¡°ÒÖÓô×ÔÉ±¡±</a><br>
-<a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">ÖÐ¹²Íâ½»´ÇÁî³ö¾¡³ó ¡°¹¢Ë¬Ä£ÄâÆ÷¡±±»ÏÂ¼Ü</a><br>
 <br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ"><br>ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³"><br>¾ÅÆÀ¹²²úµ³</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ"><br>¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö""><br>ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯"><br>¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì"><br>Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°"><br>Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª"><br>ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½"><br>ÌúÖ¤ÈçÉ½</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ"><br>Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦"><br>µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ"><br>ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá"><br>Ë«³ÇÑªÀá</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤"><br>ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720"><br>´Ó610µ½720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ"><br>ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý"><br>ÆÊÎö1400Àý</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà"><br>ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó"><br>±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513"><br>¼ûÖ¤513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ"><br>¹¦·ò Ñ°µÀ</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£"><br>¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ"><br>ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ"><br>ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²"><br>Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"><br>ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"><br>¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"><br>Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨"><br>303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"><br>º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"><br>Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ripamf2991/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"><br>²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1">ÎÞ¾¡¸Ð¶÷ ÒËÀ¼·¨ÂÖ¹¦Ñ§Ô±ÏòÀîºéÖ¾ÏÈÉú°ÝÄê</a><br>¶þÁãÒ»¾ÅÄêÊ®¶þÔÂ¶þÊ®¾ÅÈÕ£¬À´×ÔÒËÀ¼ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753358.md#1">»Æçù±»ÃØÃÜ×ªÖÁ¼àÓü Ä¸Ç×ÈÔ±»Èí½û</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754403.md#1">Ìì½òÇ¿²ðÊÀ½ç¼¶±ðÊûÈº Êý°ÙÒµÖ÷×ßÍ¶ÎÞÂ·</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749398.md#1">¸ÊËàÇìÑôÊÐ·¨ÂÖ¹¦Ñ§Ô±±»ÆÈº¦Çé¿ö×ÛÊö£¨ÖÐ£©</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753546.md#1">ÖØÇìÖÐÑ§ÉúÔÚÑ§Ð£×¹Íö ¼ÒÈË±»½û¼ûÒÅÌå</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748971.md#1">±±¾©Å®×ÓÀÍ½ÌËùÇ°Ëù³¤Àî¼ÌÈÙµÄ×ïÐÐ</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755622.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/09/1709020240381758-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755622.md#1">»ÆÆæ·«£º´óÂ½·¿µØ²úÉÌ10Äê¿ÉÄÜÌÔÌ­8Íò</a><br>´óÂ½½ñÄêÒÑÓÐ400¶à¼Ò·¿µØ²ú¹«Ë¾ÆÆ²ú£ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755989.md#1">Ã»Ç®ÁË£¡ÖÐ¹²Á½²¿ÃÅ¶¼º°2020¹ý¡°½ôÈÕ×Ó¡±</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755948.md#1">ÄÉÍßÂÞ£ºÃÀÖÐ»òÔÚÏÂÖÜÇ©µÚÒ»½×¶ÎÃ³Ò×Ð­Òé</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11753878.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿2020ÄêÖÐ¹ú¾­¼Ã¾Å´óÇ÷ÊÆ£¨ÏÂ£©</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755722.md#1">´«Áõº×±¾ÖÜÄ©¸°ÃÀÇ©ÊðµÚÒ»½×¶ÎÃ³Ò×Ð­Òé</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754376.md#1">Òµ½çÈËÊ¿£ºÃÀÖÐÃ³Ò×ÕæÕýµÄ´óÏ·ÔÚ¼¼ÊõÁìÓò</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756006.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/01/4c18dd8c429eb600747e4fe07ebd8649-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756006.md#1">×ÜÍ³±çÂÛ»á ²ÌÓ¢ÎÄ¶Á¸ÛÈËÀ´ÐÅ£º²»ÒªÏàÐÅÖÐ¹²</a><br>ÔÚÌ¨ÍåµÄ×ÜÍ³±çÂÛ»áÉÏ£¬²ÌÓ¢ÎÄ¶ÁÁËÏã ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755082.md#1">ÖÐ¹²¿ÖÏÅ½ÌÊ¦Ð£³¤ ¸Û½ÌÓý½ç½«¾ÙÐÐ¼¯»á»Ø»÷</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755956.md#1">ÖÐ¹²Íø¿ØÔÙÉý¼¶  ÖÆ×÷¼°×ª·¢ÊÓÆµÒªÊµÃûÖÆ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753824.md#1">ÖÐ¹²ÍÆ³öÃÜÂë·¨ ±»Ö¸ÇÔÈ¡ÉÌÒµ»úÃÜÓë²Æ¸»</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755101.md#1">²¨ÌØÍõÏòÎåÃ«Ð¡·Ûºìº°»°£ºÃñÖ÷×ÔÓÉ¿É¹ó</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754189.md#1">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²¾ÍÏã¸ÛÎÊÌâÆÛÆ­È«ÊÀ½ç</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1">´óÂ½¸Éºµ³ÖÐøÊýÔÂ ½­Î÷½ü33ÍòÈËÒûË®À§ÄÑ</a><br>ÊýÔÂÒÔÀ´£¬ÖÐ¹ú´óÂ½¶àÊ¡³ÖÐøÑÏÖØ¸Éºµ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754339.md#1">ÖØÇì¸¢ÁêÒ»¾ÓÃñÂ¥×Å»ð 6ÈËËÀÍö</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754205.md#1">ÁÉÄþÉòÑôÒ»´ó°Í×²ÏÞ¸ß¸Ë ³µ¶¥È«²¿±»Ï÷µô</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753030.md#1">É½Î÷¹úÆóÃº¿ó¼¯ÍÅ×Ó¹«Ë¾·¢ÉúÊÂ¹Ê 5ËÀ1ÉË</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752431.md#1">º¼ÖÝÒ»ºÏ×Ê»¯¹¤³§²Ö¿â×Å»ð</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748552.md#1">ºþ±±Ó¦³Ç4.9¼¶µØÕð 600¶à»§Ãñ¾ÓÏÖÁÑ·ì</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756041.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/01/5ad03ce551f46e51ca4a8b60c499c791-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756041.md#1">Ê§×Ù8¸öÔÂ ³¯ÏÊ¹ÙÔ±ÀîÉÆÈ¨ÏÖÉíÀÍ¶¯µ³È«»á</a><br>º«¹úÃ½Ìå±¨µ¼£¬ÒÑ¾­8¸öÔÂÎ´¹«¿ªÂ¶Ãæµ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754591.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/29£©</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1">°×¹¬£ºÈô³¯ÏÊÊÔÉäÔ¶³Ìµ¼µ¯ ÃÀ½«²ÉÈ¡ÐÐ¶¯</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753463.md#1">Ì¨´óÑ¡±çÂÛ ¾Û½¹Ò»¹úÁ½ÖÆ¡¢Ïã¸Û¡¢·´ÉøÍ¸·¨</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753758.md#1">ÃÀÇé±¨Öú¶íÆÆ»ñ¿Ö²ÀÏ®»÷ ÆÕ¾©ÖÂµç¸ÐÐ»´¨ÆÕ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753643.md#1">ÌÀÎ¨Ãæ¶Ô¾µÍ·È÷Àá ½Ò¿ªÅ®ÐÇ²»ÎªÈËÖªµÄÞÏÞÎ</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1">ÔøÔâÄÐÓÑÈèÂî ÉòÑôº½¿Õº½Ìì´óÑ§Å®Éú×¹Â¥Íö</a><br>½üÈÕ£¬ÓÐÌùÎÄ³Æ£¬ÉòÑôº½¿Õº½Ìì´óÑ§Ò» ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754408.md#1">»ùÒò±à¼­Ó¤¶ù ºØ½¨¿üÉæ·Ç·¨ÐÐÒ½»ñÐÌ3Äê</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749809.md#1">ÀîÈÙºÆÌ¾ÈËµÄ»µÃ»µ×Ïß µË×ÏÆåÓÃÊ«ÐÔ¸è´Ê»ØÓ¦</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749205.md#1">¹ãÖÝ´óÑ§Ç°Ôº³¤»ñËÀÐÌ ÔøÍ±ËÀÍ¬Ð£´¦³¤·ò¸¾</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745307.md#1">´¨ÆÕÓëµÚÒ»·òÈË·¢±íÊ¥µ®ÖÂ´Ç È«ÎÄ·­Òë</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744548.md#1">2020ÄêÌì½ò±¨Ö½¡¶³ÇÊÐ¿ì±¨¡·½«ÐÝ¿¯</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1">ÍøÎÄ£º´óÂ½Æû³µÐÐÒµ¼èÄÑµÄÁ½´ó¿´µã</a><br>´óÂ½Æû³µÐÐÒµ½ñÄêÉîÏÝÄàÌ¶£¬ÏúÁ¿ÏÂ»¬ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742305.md#1">ÍøÎÄ£ºÑëÐÐÇ®Ó¡³öÀ´ÁË ½èÇ®µÄÈËÃ»ÁË</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11706347.md#1">·´ËÍÖÐºÍÁùËÄÊÂ¼þ ÃÀÕþ¸®Ó¦¶Ô´ëÊ©¶Ô±È</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728358.md#1">¸ÛÈË¸ø¿¹ÒéÕßÃÇÐ´Ê¥µ®¿¨£ºÒÔºóÔÙÇì×£</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11726478.md#1">ÖÐ¹²²Î¾üÐí½ø²»Ðí³ö Ò»´óÑ§ÉúÍËÎéÔâÖØ·£</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/12/n11718936.md#1">ÃÀÁªÉç¼ÍÄî±»ÖÐ¹²ÒÔ¼äµý×ïÉ±º¦µÄÖÐ¹ú¼ÇÕß</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1">ÖÐ¿Æ´ó¸±Ð£³¤±»Ö¸ÓëÖÐ¹²¾üÆóºÏ×÷ ÔøÔâÃÀ¾ÜÇ©</a><br>½ñÄêÄê³õÃÀÇ©±»¾ÜµÄÖÐ¹úÁ¿×Ó¿ÆÑ§¼ÒÅË ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746173.md#1">ÕãÊýÇ§Ñ§×ÓÁ¬ÐøÎ¬È¨ÈýÌì ¿¹ÒéÑ§Ð£¸ÄÃû»»ÖÆ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742110.md#1">·¢±í³Å¸ÛÃð¹²ÑÔÂÛ ´óÂ½¶àÃû¹«ÃñÔâÐÌ¾Ð</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/18/n11731023.md#1">ÔÁ´åÃñÆûÓÍµ¯¹¥Õþ¸®ÊÓÆµÆØ¹â Ä¿»÷ÕßÃèÊöÏÖ³¡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728981.md#1">´åÃñÒÉÕþ¸®Ò×µØ½¨»ðÔá³¡ Ã¯ÃûÔÙ±¬¾¯Ãñ³åÍ»</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/15/n11723534.md#1">Íø´«ÉÏº£ÊÐÃñÉÏ½Ö¿¹Òé ¸ßºô¡°´òµ¹¸¯°Ü¡±</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/unnamed-file-2-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756278.md#1">ÎÞ¾¡¸Ð¶÷ ÒËÀ¼·¨ÂÖ¹¦Ñ§Ô±ÏòÀîºéÖ¾ÏÈÉú°ÝÄê</a><br>¶þÁãÒ»¾ÅÄêÊ®¶þÔÂ¶þÊ®¾ÅÈÕ£¬À´×ÔÒËÀ¼ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753358.md#1">»Æçù±»ÃØÃÜ×ªÖÁ¼àÓü Ä¸Ç×ÈÔ±»Èí½û</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754403.md#1">Ìì½òÇ¿²ðÊÀ½ç¼¶±ðÊûÈº Êý°ÙÒµÖ÷×ßÍ¶ÎÞÂ·</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749398.md#1">¸ÊËàÇìÑôÊÐ·¨ÂÖ¹¦Ñ§Ô±±»ÆÈº¦Çé¿ö×ÛÊö£¨ÖÐ£©</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753546.md#1">ÖØÇìÖÐÑ§ÉúÔÚÑ§Ð£×¹Íö ¼ÒÈË±»½û¼ûÒÅÌå</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748971.md#1">±±¾©Å®×ÓÀÍ½ÌËùÇ°Ëù³¤Àî¼ÌÈÙµÄ×ïÐÐ</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755622.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/09/1709020240381758-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755622.md#1">»ÆÆæ·«£º´óÂ½·¿µØ²úÉÌ10Äê¿ÉÄÜÌÔÌ­8Íò</a><br>´óÂ½½ñÄêÒÑÓÐ400¶à¼Ò·¿µØ²ú¹«Ë¾ÆÆ²ú£ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755989.md#1">Ã»Ç®ÁË£¡ÖÐ¹²Á½²¿ÃÅ¶¼º°2020¹ý¡°½ôÈÕ×Ó¡±</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755948.md#1">ÄÉÍßÂÞ£ºÃÀÖÐ»òÔÚÏÂÖÜÇ©µÚÒ»½×¶ÎÃ³Ò×Ð­Òé</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11753878.md#1">¡¾Ê®×ÖÂ·¿Ú¡¿2020ÄêÖÐ¹ú¾­¼Ã¾Å´óÇ÷ÊÆ£¨ÏÂ£©</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755722.md#1">´«Áõº×±¾ÖÜÄ©¸°ÃÀÇ©ÊðµÚÒ»½×¶ÎÃ³Ò×Ð­Òé</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754376.md#1">Òµ½çÈËÊ¿£ºÃÀÖÐÃ³Ò×ÕæÕýµÄ´óÏ·ÔÚ¼¼ÊõÁìÓò</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/09/1709140247431758-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756102.md#1">ÖÐ¹²Íâ½»´ÇÁî³ö¾¡³ó ¡°¹¢Ë¬Ä£ÄâÆ÷¡±±»ÏÂ¼Ü</a><br>ÖÐ¹úÍâ½»²¿·¢ÑÔÈË¹¢Ë¬µÄ¶ÔÍâ·¢ÑÔ±»Íâ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756006.md#1">×ÜÍ³±çÂÛ»á ²ÌÓ¢ÎÄ¶Á¸ÛÈËÀ´ÐÅ£º²»ÒªÏàÐÅÖÐ¹²</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755082.md#1">ÖÐ¹²¿ÖÏÅ½ÌÊ¦Ð£³¤ ¸Û½ÌÓý½ç½«¾ÙÐÐ¼¯»á»Ø»÷</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755956.md#1">ÖÐ¹²Íø¿ØÔÙÉý¼¶  ÖÆ×÷¼°×ª·¢ÊÓÆµÒªÊµÃûÖÆ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753824.md#1">ÖÐ¹²ÍÆ³öÃÜÂë·¨ ±»Ö¸ÇÔÈ¡ÉÌÒµ»úÃÜÓë²Æ¸»</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11755101.md#1">²¨ÌØÍõÏòÎåÃ«Ð¡·Ûºìº°»°£ºÃñÖ÷×ÔÓÉ¿É¹ó</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752375.md#1">´óÂ½¸Éºµ³ÖÐøÊýÔÂ ½­Î÷½ü33ÍòÈËÒûË®À§ÄÑ</a><br>ÊýÔÂÒÔÀ´£¬ÖÐ¹ú´óÂ½¶àÊ¡³ÖÐøÑÏÖØ¸Éºµ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754339.md#1">ÖØÇì¸¢ÁêÒ»¾ÓÃñÂ¥×Å»ð 6ÈËËÀÍö</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754205.md#1">ÁÉÄþÉòÑôÒ»´ó°Í×²ÏÞ¸ß¸Ë ³µ¶¥È«²¿±»Ï÷µô</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753030.md#1">É½Î÷¹úÆóÃº¿ó¼¯ÍÅ×Ó¹«Ë¾·¢ÉúÊÂ¹Ê 5ËÀ1ÉË</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11752431.md#1">º¼ÖÝÒ»ºÏ×Ê»¯¹¤³§²Ö¿â×Å»ð</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11748552.md#1">ºþ±±Ó¦³Ç4.9¼¶µØÕð 600¶à»§Ãñ¾ÓÏÖÁÑ·ì</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756213.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/e5d6aab0b85e4f8b74eeb052a456b5d0-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756213.md#1">Ò»Ô±¹¤ÔÚ×Ü²¿ÌøÂ¥ º£¿µÍþÊÓÖ¸Æä¡°ÒÖÓô×ÔÉ±¡±</a><br>´óÂ½¼à¿ØÉè±¸¿Æ¼¼¹«Ë¾º£¿µÍþÊÓ·¢²¼Í¨ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11756041.md#1">Ê§×Ù8¸öÔÂ ³¯ÏÊ¹ÙÔ±ÀîÉÆÈ¨ÏÖÉíÀÍ¶¯µ³È«»á</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754591.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/29£©</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753606.md#1">°×¹¬£ºÈô³¯ÏÊÊÔÉäÔ¶³Ìµ¼µ¯ ÃÀ½«²ÉÈ¡ÐÐ¶¯</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753463.md#1">Ì¨´óÑ¡±çÂÛ ¾Û½¹Ò»¹úÁ½ÖÆ¡¢Ïã¸Û¡¢·´ÉøÍ¸·¨</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/29/n11753758.md#1">ÃÀÇé±¨Öú¶íÆÆ»ñ¿Ö²ÀÏ®»÷ ÆÕ¾©ÖÂµç¸ÐÐ»´¨ÆÕ</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754599.md#1">ÔøÔâÄÐÓÑÈèÂî ÉòÑôº½¿Õº½Ìì´óÑ§Å®Éú×¹Â¥Íö</a><br>½üÈÕ£¬ÓÐÌùÎÄ³Æ£¬ÉòÑôº½¿Õº½Ìì´óÑ§Ò» ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/30/n11754408.md#1">»ùÒò±à¼­Ó¤¶ù ºØ½¨¿üÉæ·Ç·¨ÐÐÒ½»ñÐÌ3Äê</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749809.md#1">ÀîÈÙºÆÌ¾ÈËµÄ»µÃ»µ×Ïß µË×ÏÆåÓÃÊ«ÐÔ¸è´Ê»ØÓ¦</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/27/n11749205.md#1">¹ãÖÝ´óÑ§Ç°Ôº³¤»ñËÀÐÌ ÔøÍ±ËÀÍ¬Ð£´¦³¤·ò¸¾</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11745307.md#1">´¨ÆÕÓëµÚÒ»·òÈË·¢±íÊ¥µ®ÖÂ´Ç È«ÎÄ·­Òë</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/25/n11744548.md#1">2020ÄêÌì½ò±¨Ö½¡¶³ÇÊÐ¿ì±¨¡·½«ÐÝ¿¯</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/09/0d200b63bdf261cb1251b781df880bbd-600x400-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742493.md#1">ÍøÎÄ£º´óÂ½Æû³µÐÐÒµ¼èÄÑµÄÁ½´ó¿´µã</a><br>´óÂ½Æû³µÐÐÒµ½ñÄêÉîÏÝÄàÌ¶£¬ÏúÁ¿ÏÂ»¬ ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742305.md#1">ÍøÎÄ£ºÑëÐÐÇ®Ó¡³öÀ´ÁË ½èÇ®µÄÈËÃ»ÁË</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11706347.md#1">·´ËÍÖÐºÍÁùËÄÊÂ¼þ ÃÀÕþ¸®Ó¦¶Ô´ëÊ©¶Ô±È</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728358.md#1">¸ÛÈË¸ø¿¹ÒéÕßÃÇÐ´Ê¥µ®¿¨£ºÒÔºóÔÙÇì×£</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/16/n11726478.md#1">ÖÐ¹²²Î¾üÐí½ø²»Ðí³ö Ò»´óÑ§ÉúÍËÎéÔâÖØ·£</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/12/n11718936.md#1">ÃÀÁªÉç¼ÍÄî±»ÖÐ¹²ÒÔ¼äµý×ïÉ±º¦µÄÖÐ¹ú¼ÇÕß</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-458179366-150x120.jpg"></a><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11747752.md#1">ÖÐ¿Æ´ó¸±Ð£³¤±»Ö¸ÓëÖÐ¹²¾üÆóºÏ×÷ ÔøÔâÃÀ¾ÜÇ©</a><br>½ñÄêÄê³õÃÀÇ©±»¾ÜµÄÖÐ¹úÁ¿×Ó¿ÆÑ§¼ÒÅË ...<br><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/26/n11746173.md#1">ÕãÊýÇ§Ñ§×ÓÁ¬ÐøÎ¬È¨ÈýÌì ¿¹ÒéÑ§Ð£¸ÄÃû»»ÖÆ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/24/n11742110.md#1">·¢±í³Å¸ÛÃð¹²ÑÔÂÛ ´óÂ½¶àÃû¹«ÃñÔâÐÌ¾Ð</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/18/n11731023.md#1">ÔÁ´åÃñÆûÓÍµ¯¹¥Õþ¸®ÊÓÆµÆØ¹â Ä¿»÷ÕßÃèÊöÏÖ³¡</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/17/n11728981.md#1">´åÃñÒÉÕþ¸®Ò×µØ½¨»ðÔá³¡ Ã¯ÃûÔÙ±¬¾¯Ãñ³åÍ»</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/15/n11723534.md#1">Íø´«ÉÏº£ÊÐÃñÉÏ½Ö¿¹Òé ¸ßºô¡°´òµ¹¸¯°Ü¡±</a><br><br><p><a href="https://github.com/ripamf2991/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/ripamf2991/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
 ```diff
-- ¹² 349,027,812 ÈË
+- ¹² 349,029,567 ÈË
 ```
 </strong>
 <a href="https://github.com/ripamf2991/djy/blob/master/gb/19/11/19/n11666092.md#1">¾ÅÆÀ15ÖÜÄê ¿´´óÂ½ÃñÖÚÆúÖÐ¹² ¾ä¾äÕæÇé</a><br>
